--- a/bin/index.html
+++ b/bin/index.html
@@ -37,6 +37,9 @@
             <div id="gameArea" class="border h-100 d-flex flex-wrap"></div>
         </div>
         <div class="col-3 d-flex flex-column mb-2">
+            <form action="/logout" method="GET" class="row mt-2 mb-2">
+                <button type="submit" class="btn btn-primary">Log out</button>
+            </form>
             <div class='row'>
                 <h2>Game rules</h2>
             </div>
