--- a/bin/login.html
+++ b/bin/login.html
@@ -11,17 +11,21 @@
 
 <body>
     <div class="container">
+        <h1>Remove the cube</h1>
         <form action="/login" method="POST">
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Login</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="admin">
+                <input type="text" name="login" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="admin">
                 <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
               </div>
               <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" value="admin">
+                <input type="password" name="password" class="form-control" id="exampleInputPassword1" value="admin">
               </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="button" class="btn btn-primary" disabled>Register</button>
+              </div>
         </form>
     </div>
 </body>
